Nao retornar campos de documento na listagem
