# src/modules/users/dtos/ICreateUserDTO.ts
@@ -2,7 +2,9 @@ export default interface ICreateUserDTO {
   name: string;
   nickname: string;
   email: string;
+  phone?: string;
   password: string;
+  cnpj?: string;
   document: string;
   is_legal: boolean;
 }
